# observer_pattern

./: .gitignore  CMakeLists.txt  main.cpp
src/: odr.cpp
src/include/: enums.h  observer.h  observer_interface.h  odr.h  subject.h
test/: CMakeLists.txt  author_demo.cpp
